Fix DCHECK failure in PrintRenderFrameHelper::PrintPreviewContext.

Accept the "DONE" state as a valid state for failing, since after the
rendering is done, there is still work to do and that work can
potentially fail.

BUG=872980

Change-Id: If1eb31c57057b2e6354dc4649ec7806468fa3f1d
Reviewed-on: https://chromium-review.googlesource.com/1170199
Reviewed-by: Rebekah Potter <rbpotter@chromium.org>
Commit-Queue: Lei Zhang <thestig@chromium.org>
Cr-Commit-Position: refs/heads/master@{#582775}